--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "homepage": "https://AndriiVeremi/team-project-filmoteka",
   "scripts": {
-    "start": "parcel src/*.html",
+    "start": "parcel src/*.html --open",
     "build": "parcel build src/*.html --public-url /team-project-filmoteka/"
   },
   "repository": {
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
+    "font-face": "^2.3.4",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
     "tui-pagination": "^3.4.1"
