--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
+    "basiclightbox": "^5.0.4",
     "font-face": "^2.3.4",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
