--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "basiclightbox": "^5.0.4",
+    "firebase": "^9.20.0",
     "font-face": "^2.3.4",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
@@ -30,7 +31,8 @@
     "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
+    "posthtml-include": "^1.7.4",
+    "process": "^0.11.10"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
